# autotyper

./: LICENSE  README.md  pyproject.toml
autotyper/: __init__.py
tests/: test_autotyper.py
