[tool.poetry]
name = "autotyper"
version = "1.0.1"
description = "Paste the contents of a file to the cursor after a specified delay"
authors = ["Junaid Rahim <junaidrahim8d@gmail.com>"]
keywords=["autotyper", "copy-paste"]
readme="README.md"
license="MIT"
homepage="https://github.com/junaidrahim/autotyper"
repository="https://github.com/junaidrahim/autotyper"
include=[
	"LICENSE",
]


[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.52"

[tool.poetry.scripts]
autotyper = 'autotyper:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
